--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">WechatImitation</string>
-    <string name="page_title">tPage Title</string>
+    <string name="app_name">仿微信</string>
+    <string name="page_title">微信</string>
     <string name="favorite">favorite</string>
     <string name="search">search</string>
     <string name="more">more</string>
